make gaia introspection variable